--- a/cities.html
+++ b/cities.html
@@ -8,19 +8,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <script src="global.js" type="module"></script>
     <script src="cities.js" type="module"></script>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body data-page="cities">
     <!-- Header Section -->
     <header class="main-header">
         <div class="nav-container">
-            <h1><a href="index.html">PILATES FINDER</a></h1>
+            <h1><a href="/">PILATES FINDER</a></h1>
             <button class="hamburger" aria-label="Menu">
                 <span></span><span></span><span></span>
             </button>
             <nav class="nav-menu">
                 <a href="/" class="nav-link">Home</a>
-                <a href="/states.html" class="nav-link">States</a>
+                <a href="/states" class="nav-link">States</a>
                 <a href="/about-pilates-finder" class="nav-link">About</a>
                 <a href="/contact-us" class="nav-link">Contact</a>
             </nav>
@@ -55,10 +54,10 @@
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/states.html">States</a></li>
+                    <li><a href="/states">States</a></li>
                     <li><a href="/about-pilates-finder">About</a></li>
                     <li><a href="/contact-us">Contact</a></li>
-                    <li><a href="index.html#types-of-pilates">Types of Pilates</a></li>
+                    <li><a href="/#types-of-pilates">Types of Pilates</a></li>
                 </ul>
             </div>
             <div class="footer-section">
