--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script src="js/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </head>
 <body>
     <!-- Header Section -->
