fiix about page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Font Awesome CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
+    <script src="/global.js" type="module"></script>
     <script src="/index.js" type="module"></script>
 </head>
 <body>
@@ -28,7 +29,7 @@
     <!-- Header Section -->
     <header class="main-header">
         <div class="nav-container">
-            <h1><a href="index.html">PILATES FINDER</a></h1>
+            <h1><a href="/">PILATES FINDER</a></h1>
             <button class="hamburger" aria-label="Menu">
                 <span></span><span></span><span></span>
             </button>
@@ -74,7 +75,7 @@
         <section class="explore-location">
             <div class="section-header index-page">
                 <h2>Explore Pilates by Location</h2>
-                <a href="states.html" class="view-all-link">Explore Pilates Studios by States -></a>
+                <a href="/states.html" class="view-all-link">Explore Pilates Studios by States -></a>
             </div>
             <div id="featured-cities-list" class="cities-list">
                 <!-- City cards will be dynamically added here -->
