--- a/about.html
+++ b/about.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | PILATES FINDER</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script src="./index.js" type="module"></script>
+    <script src="/index.js" type="module"></script>
 </head>
 <body>
     <!-- Header Section -->
     <header class="main-header">
         <div class="nav-container">
-            <h1><a href="index.html">PILATES FINDER</a></h1>
+            <h1><a href="/">PILATES FINDER</a></h1>
             <button class="hamburger" aria-label="Menu">
                 <span></span><span></span><span></span>
             </button>
