--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- Font Awesome CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
-    <script src="./global.js" type="module"></script>
-    <script src="./index.js" type="module"></script>
+    <script src="/global.js" type="module"></script>
+    <script src="/index.js" type="module"></script>
 </head>
 <body>
     <a href="#main-content" class="skip-to-main">Skip to main content</a>
