--- a/cities.html
+++ b/cities.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pilates Finder - Cities</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <script src="./global.js" type="module"></script>
-    <script src="./cities.js" type="module"></script>
+    <script src="/global.js" type="module"></script>
+    <script src="/cities.js" type="module"></script>
 </head>
 <body data-page="cities">
     <!-- Header Section -->
