try fx ciites html

--- a/cities.html
+++ b/cities.html
@@ -19,9 +19,9 @@
             </button>
             <nav class="nav-menu">
                 <a href="/" class="nav-link">Home</a>
-                <a href="/states" class="nav-link">States</a>
-                <a href="/about-pilates-finder" class="nav-link">About</a>
-                <a href="/contact-us" class="nav-link">Contact</a>
+                <a href="/states.html" class="nav-link">States</a>
+                <a href="/about.html" class="nav-link">About</a>
+                <a href="/contact.html" class="nav-link">Contact</a>
             </nav>
         </div>
     </header>
@@ -54,10 +54,10 @@
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/states">States</a></li>
-                    <li><a href="/about-pilates-finder">About</a></li>
-                    <li><a href="/contact-us">Contact</a></li>
-                    <li><a href="/#types-of-pilates">Types of Pilates</a></li>
+                    <li><a href="states.html">States</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html#types-of-pilates">Types of Pilates</a></li>
                 </ul>
             </div>
             <div class="footer-section">
